[tool.poetry]
name = "geocoding"
version = "0.1.0"
description = ""
authors = ["pli <chordplaylist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2024.7.4"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
